<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/main_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:fillViewport="true"
    android:onClick="onClick"
    android:orientation="vertical"
    tools:context="com.example.nancy.poznyakova_anna.MainActivity">


    <include
        layout="@layout/toolbar"/>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <LinearLayout

            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                android:id="@+id/comun"
                style="@style/LeftTextView"
                android:layout_marginBottom="@dimen/tag_vertical_padding"
                android:layout_marginTop="@dimen/vertical_padding"
                android:onClick="onClick"
                android:text="@string/comun"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="@dimen/title_text_size"/>

            <TextView
                android:id="@+id/work"
                style="@style/Tag"
                android:text="@string/work"/>

            <View style="@style/lineStyle"/>

            <RelativeLayout
                style="@style/LinearLayout">

                <TextView
                    android:id="@+id/created"
                    style="@style/LeftTextView"
                    android:text="@string/created"/>

                <TextView
                    android:id="@+id/f_date"
                    style="@style/BasicTextView"
                    android:layout_alignParentRight="true"
                    android:text="@string/f_date"/>
            </RelativeLayout>

            <View style="@style/lineStyle"/>

            <RelativeLayout
                style="@style/LinearLayout">

                <TextView
                    android:id="@+id/registered"
                    style="@style/LeftTextView"
                    android:layout_alignParentLeft="true"
                    android:text="@string/registered"/>

                <TextView
                    android:id="@+id/s_date"
                    style="@style/BasicTextView"
                    android:layout_alignParentRight="true"
                    android:text="@string/s_date"/>
            </RelativeLayout>

            <View style="@style/lineStyle"/>

            <RelativeLayout
                style="@style/LinearLayout">

                <TextView
                    android:id="@+id/solve"
                    style="@style/LeftTextView"
                    android:layout_alignParentLeft="true"
                    android:text="@string/solve"/>

                <TextView
                    android:id="@+id/t_date"
                    style="@style/BasicTextView"
                    android:layout_alignParentRight="true"
                    android:text="@string/t_date"/>

            </RelativeLayout>

            <View style="@style/lineStyle"/>

            <RelativeLayout
                style="@style/LinearLayout">

                <TextView
                    android:id="@+id/respon"
                    style="@style/LeftTextView"
                    android:layout_alignParentLeft="true"
                    android:text="@string/respon"/>

                <TextView
                    android:id="@+id/respon_name"
                    style="@style/BasicTextView"
                    android:layout_alignParentRight="true"
                    android:text="@string/respon_name"/>

            </RelativeLayout>

            <View style="@style/lineStyle"/>

            <TextView
                android:id="@+id/large_text"
                style="@style/BasicTextView"
                android:layout_marginTop="5dp"
                android:text="@string/large_text"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/image_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="@dimen/recycler_view_height"
                android:layout_marginTop="10dp"
                android:onClick="onClick"
                android:scrollbars="horizontal"/>
        </LinearLayout>
    </ScrollView>


</LinearLayout>
